# Rasterizer_rust

./: .gitignore  Cargo.toml  Makefile  README.md  check_vulkan.sh  complex_config.toml  nahida.toml  opengl_toolchain.cmake  test_complex_config.toml
src/: SDL3-demo.rs  args.rs  camera.rs  color_utils.rs  interpolation.rs  lighting.rs  loaders.rs  main.rs  material_system.rs  model_types.rs  rasterizer.rs  renderer.rs  scene.rs  scene_object.rs  texture_utils.rs  transform.rs  utils.rs
src/core/: frame_buffer.rs  geometry.rs  geometry_processor.rs  mod.rs  parallel_rasterizer.rs  rasterizer.rs  render_config.rs  renderer.rs  scene.rs  shadow_map.rs  shadow_mapping.rs  simple_shadow_map.rs  triangle_processor.rs
src/core/rasterizer/: color_calculator.rs  lighting_effects.rs  mod.rs  msaa.rs  (+4 more)
src/demos/: demos.rs  mod.rs
src/geometry/: camera.rs  culling.rs  interpolation.rs  mod.rs  transform.rs
src/io/: args.rs  config_loader.rs  loaders.rs  mod.rs  model_loader.rs  obj_loader.rs  render_settings.rs  resource_loader.rs  simple_cli.rs
src/material_system/: light.rs  materials.rs  mod.rs  texture.rs
src/materials/: color.rs  color_utils.rs  material_system.rs  mod.rs  model_types.rs  texture.rs
src/scene/: mod.rs  scene_object.rs  scene_utils.rs
src/ui/: animation.rs  app.rs  core.rs  mod.rs  render.rs  render_ui.rs  widgets.rs
src/utils/: animation_utils.rs  depth_image.rs  image_utils.rs  material_utils.rs  mod.rs  model_types.rs  model_utils.rs  render_config.rs  render_output.rs  render_process.rs  render_utils.rs  save_utils.rs  test_utils.rs
