[package]
name = "Rasterizer_rust"
version = "1.3.0"
edition = "2024"

[dependencies]
rayon = "1"
image = "0.25"
rand = "0.9"
nalgebra = "0.33"
clap = { version = "4.5", features = ["derive"] }
atomic_float = "1"
tobj = "4"
egui = "0.31"
eframe = "0.31"
native-dialog = "0.9.0"
chrono = "0.4"

[[bin]]
name = "rasterizer"
path = "src/main.rs"
